// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Input/TextInput default 1`] = `
<input
  className="sc-EHOje cEMkQJ"
  placeholder="placeholder"
/>
`;

exports[`Storyshots Input/TextInput error 1`] = `
<input
  className="sc-EHOje bNLHzf"
  placeholder="placeholder"
/>
`;

exports[`Storyshots Input/TextInput focus 1`] = `
<input
  className="sc-EHOje cStQbY"
  placeholder="placeholder"
/>
`;
